First convert to moderneradesign

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Design Inc.</title>
+    <title>Modern Era Design Inc.</title>
 
     <link href="./css/bootstrap.min.css" rel="stylesheet">
-	<link href="./css/carousel.css" rel="stylesheet">
+	<link href="./css/theme.css" rel="stylesheet">
 	<link href="./css/style.css" rel="stylesheet">
 
   </head>
@@ -31,18 +31,20 @@
                 <span class="icon-bar"></span>
               </button>
               <a class="menu-logo" href="#" alt="euro design inc.">
-			  <img src="./img/logo_wh_sm.png">
+			  <img width="150" height="100" src="./img/logo_wh_sm.png">
 			  </a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="#about">Services</a></li>
+				<li><a href="#about">Portfolio</a></li>
+				<li><a href="#about">Vision</a></li>
                 <li><a href="#contact">Contact</a></li>
               </ul>
 			  <div class="nav navbar-nav navbar-right">
-				<p class="navbar-text small">Address: 11111 111 St NW &nbsp;<br/>
-				Phone:(780) 444-4444</p>
+				<p class="navbar-text small">Email: jehan@moderneradesign.ca <br/>
+				Phone:(780) 951–4854</p>
 			  </p>
             </div>
           </div>
@@ -62,32 +64,42 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="./img/photo.jpg" alt="First slide">
+          <img class="first-slide" src="./img/header/header01.jpg" alt="Basement">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+              <h1>Basements.</h1>
+              <p>&nbsp;</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Services</a></p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="./img/photo.jpg" alt="Second slide">
+          <img class="second-slide" src="./img/header/header02.jpg" alt="Bedroom">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <h1>Bedrooms.</h1>
+              <p>&nbsp;</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Vision</a></p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="./img/photo.jpg" alt="Third slide">
+          <img class="third-slide" src="./img/header/header03.jpg" alt="Living">
           <div class="container">
             <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              <h1>Living Rooms.</h1>
+              <p>&nbsp;</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Gallery</a></p>
+            </div>
+          </div>
+        </div>
+		<div class="item">
+          <img class="fourth-slide" src="./img/header/header04.jpg" alt="Office">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Offices.</h1>
+              <p>&nbsp;</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Contact Us</a></p>
             </div>
           </div>
         </div>
@@ -112,21 +124,21 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <img class="img-responsive" src="./img/columns.jpg" alt="Generic placeholder image">
+          <img class="img-responsive" src="./img/main/main01.jpg" alt="Services">
           <h2>Services</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+          <p>Meeting with you in person is an opportunity to convert what you would like to achieve into specific projects that fit within your budget as well prepare the foundation for transforming your ideas into a complete interior.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-responsive" src="./img/columns.jpg" alt="Generic placeholder image">
+          <img class="img-responsive" src="./img/main/main02.jpg" alt="Portfolio">
           <h2>Portfolio</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+          <p>Take a look at the work we’ve done for people & businesses and see what we can do for you.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-responsive" src="./img/columns.jpg" alt="Generic placeholder image">
+          <img class="img-responsive" src="./img/main/main03.jpg" alt="Vision">
           <h2>Vision</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p>Every person, family, and business has different needs and need a personal touch. I will work with you from start to finish and advice you on every detail from pillows to drapes and to find the colors that match your businesses theme and make your clients comfortable.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
@@ -137,11 +149,14 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Best of Houzz 2015. <span class="text-muted">Design and Client Satisfaction.</span></h2>
+          <p class="lead">In 2015, Modern Era Design portfolio was voted most popular for design and the highest level for client satisfaction by the Houzz community.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="./img/featurette.jpg" alt="Generic placeholder image">
+		<a href="http://www.houzz.com/pro/jehan-fayad/modern-era-design">
+          <img class="featurette-image img-responsive center-block" src="./img/features/houzz_design_2015.gif" alt="Best of Houzz 2015"> &nbsp; 
+		  <img class="featurette-image img-responsive center-block" src="./img/features/houzz_service_2015.gif" alt="Best of Houzz 2015">
+		</a>
         </div>
       </div>
 
@@ -149,24 +164,14 @@
 
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Best of Houzz 2014. <span class="text-muted">Client Satisfaction.</span></h2>
+          <p class="lead">In 2014, Modern Era Design was voted most popular for the highest level for client satisfaction by the Houzz community.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" src="./img/featurette.jpg" alt="Generic placeholder image">
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="./img/featurette.jpg" alt="Generic placeholder image">
-        </div>
+		<a href="http://www.houzz.com/pro/jehan-fayad/modern-era-design">
+          <img class="featurette-image img-responsive center-block" src="./img/features/badge_13_8.png" alt="Best of Houzz 2014">
+		</a>
+		</div>
       </div>
 
       <hr class="featurette-divider">
@@ -179,13 +184,18 @@
 	  
 		<div class="col-lg-6">
 			<p>&nbsp;</p>
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2369.774219995239!2d-113.5270362!3d53.56179780000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53a023c6593b5821%3A0xdcaa5c4a631e436a!2sEuro+Design+Inc!5e0!3m2!1sen!2sca!4v1443305401561" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+			<a title="Click for the Business Review of Modern Era Design Inc, an Interior Decorators & Designers in Edmonton AB" href="https://www.bbb.org/edmonton/business-reviews/interior-decorators-and-designers/modern-era-design-in-edmonton-ab-172301#sealclick"><img alt="Click for the BBB Business Review of this Interior Decorators & Designers in Edmonton AB" style="border: 0;" src="https://seal-edmonton.bbb.org/seals/black-seal-120-61-whitetxt-moderneradesigninc-172301.png" /></a>
 		</div>
 		<div class="col-lg-3">
 			
 		</div>
 		<div class="col-lg-3">
-			<p>&nbsp;</p>
+			<p class="social">
+			<a href="http://www.facebook.com/jehan.fayad"><img src="./img/facebook.png" alt="facebook" width="50" height="50" /></a>
+			<a href="http://www.houzz.com/pro/jehan-fayad"><img src="./img/houzz.png" alt="houzz" width="50" height="50" /></a>
+			<a href="http://snapwidget.com/u/824029115"><img src="./img/instagram.png" alt="instagram" width="50" height="50" /></a>
+			<a href="http://www.linkedin.com/profile/view?id=209522150"><img src="./img/Linkedin.png" alt="Linkedin" width="50" height="50" /></a>
+			</p>
 			<button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#contactmodal">
 				Contact Us
 			</button>
