--- a/services.html
+++ b/services.html
@@ -36,8 +36,8 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="./services.html">Services</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li class="active"><a href="./services.html">Services</a></li>
 				<li><a href="./gallery.html">Portfolio</a></li>
 				<li><a href="./vision.html">Vision</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -54,128 +54,36 @@
     </div>
 
 
-    <!-- Carousel ================================================== -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-		<li data-target="#myCarousel" data-slide-to="3"></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img class="first-slide" src="./img/header/header01.jpg" alt="Basement">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Basements.</h1>
-              <p>&nbsp;</p>
-              <p><a class="btn btn-lg btn-primary" href="./services.html" role="button">View our Services</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img class="second-slide" src="./img/header/header02.jpg" alt="Bedroom">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Bedrooms.</h1>
-              <p>&nbsp;</p>
-              <p><a class="btn btn-lg btn-primary" href="./vision.html" role="button">See our Vision</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img class="third-slide" src="./img/header/header03.jpg" alt="Living">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Living Rooms.</h1>
-              <p>&nbsp;</p>
-              <p><a class="btn btn-lg btn-primary" href="./gallery.html" role="button">Check out the Gallery</a></p>
-            </div>
-          </div>
-        </div>
-		<div class="item">
-          <img class="fourth-slide" src="./img/header/header04.jpg" alt="Office">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Offices.</h1>
-              <p>&nbsp;</p>
-              <p><a class="btn btn-lg btn-primary" href="#contact" role="button">Contact Us</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div><!-- /.carousel -->
-
-
-    <!-- Marketing messaging and featurettes
-    ================================================== -->
-    <!-- Wrap the rest of the page in another container to center all the content. -->
-
-    <div class="container marketing">
-
-      <!-- Three columns of text below the carousel -->
-      <div class="row">
-        <div class="col-md-4">
-          <img class="img-responsive" src="./img/main/main01.jpg" alt="Services">
-          <h2>Services</h2>
-          <p>Meeting with you in person is an opportunity to convert what you would like to achieve into specific projects that fit within your budget as well prepare the foundation for transforming your ideas into a complete interior.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-md-4">
-          <img class="img-responsive" src="./img/main/main02.jpg" alt="Portfolio">
-          <h2>Portfolio</h2>
-          <p>Take a look at the work we’ve done for people & businesses and see what we can do for you.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-md-4">
-          <img class="img-responsive" src="./img/main/main03.jpg" alt="Vision">
-          <h2>Vision</h2>
-          <p>Every person, family, and business has different needs and need a personal touch. I will work with you from start to finish and advice you on every detail from pillows to drapes and to find the colors that match your businesses theme and make your clients comfortable.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-      </div><!-- /.row -->
-
-	        <!-- START THE FEATURETTES -->
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading">Best of Houzz 2015. <span class="text-muted">Design and Client Satisfaction.</span></h2>
-          <p class="lead">In 2015, Modern Era Design portfolio was voted most popular for design and the highest level for client satisfaction by the Houzz community.</p>
-        </div>
-        <div class="col-md-5">
-		<a href="http://www.houzz.com/pro/jehan-fayad/modern-era-design">
-          <img class="featurette-image img-responsive center-block" src="./img/features/houzz_design_2015.gif" alt="Best of Houzz 2015"> &nbsp; 
-		  <img class="featurette-image img-responsive center-block" src="./img/features/houzz_service_2015.gif" alt="Best of Houzz 2015">
-		</a>
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">Best of Houzz 2014. <span class="text-muted">Client Satisfaction.</span></h2>
-          <p class="lead">In 2014, Modern Era Design was voted most popular for the highest level for client satisfaction by the Houzz community.</p>
-        </div>
-        <div class="col-md-5 col-md-pull-7">
-		<a href="http://www.houzz.com/pro/jehan-fayad/modern-era-design">
-          <img class="featurette-image img-responsive center-block" src="./img/features/badge_13_8.png" alt="Best of Houzz 2014">
-		</a>
+	  <!-- START THE FEATURETTES -->
+	<div class="container subpage"> 
+	
+		<div class="page-header">
+		<h1>Book an Hour Design/Color Consultation. <br/><small>“The Beginning”</small></h1>
+		<p>Meeting with you in person is an opportunity to convert what you would like to achieve into specific projects that fit within your budget as well prepare the foundation for transforming your ideas into a complete interior.  In some cases our interior design consultation may be all you need to get yourself started, if you are planning to do the work yourself. During the 1 hour consultation, we would review your space, discuss expectations, functions, styles, colors, trends, lighting. We will try to answer any other design dilemmas that you may have.  $200 for an hour consultation.  If you decide that you’ll need further assistance, we charge an hourly fee of $150.  Depending on the scope of work and want an estimate of how much a project would cost, a package can be made up for you.</p>
 		</div>
-      </div>
 
-      <hr class="featurette-divider">
+		<div class="page-header">
+		<h1>Space Planning <br/><small>“The Core of Interior Design”.</small></h1>
+		<p>Trying to make your use of your space but can’t seem to get it right?  We’ll help customize your space to be more functional, beautiful and well designed to suite your needs.</p>
+		</div>
+		
+		<div class="page-header">
+		<h1>Sustainability Green Design <br/><small>“The future is green energy, sustainability, renewable energy”. <em>-<a href="http://www.brainyquote.com/quotes/authors/a/arnold_schwarzenegger.html">Arnold Schwarzenegger. </a></em></small></h1>
+		<p>Due to the global issues that has been effecting the environment, there are ways to make your home energy efficient and adding eco-friendly elements to your space.  If sustainable design is a requirement to your design we’ll help you to the make the right decisions.  From fabric choices, flooring to lighting, we can educate you to put you on the right eco-friendly start.</p>
+		</div>
+		
+		<div class="page-header">
+		<h1>Personal Shopping, Product Sourcing, Accessories selection</h1>
+		<p>Need on the spot advice on your shopping trips. I’ll be there right with you as we choose finishes, furniture, art, or whatever you need for your space.</p>
+		</div>
+		
+		<div class="page-header">
+		<h1>3D Rendering and perspective “see it before you build it”</h1>
+		<p><img class="img-responsive" src="./img/3drender.jpg" alt="" width="670" height="377" /></p>
+		<p>We can provide you 3D or 2D drawings on how your space will look like.  This is perfect for the individual who has trouble visualizing what the space will look like in their head.</p>
+		</div>
+		
+		<p>&nbsp;</p>
 
 	</div><!-- /.container -->
 	
@@ -183,14 +91,14 @@
 	<footer>
 	<div class="container-fluid dark" id="contact">
 	  
-		<div class="col-md-4">
+		<div class="col-lg-6">
 			<p>&nbsp;</p>
 			<a title="Click for the Business Review of Modern Era Design Inc, an Interior Decorators & Designers in Edmonton AB" href="https://www.bbb.org/edmonton/business-reviews/interior-decorators-and-designers/modern-era-design-in-edmonton-ab-172301#sealclick"><img alt="Click for the BBB Business Review of this Interior Decorators & Designers in Edmonton AB" style="border: 0;" src="https://seal-edmonton.bbb.org/seals/black-seal-120-61-whitetxt-moderneradesigninc-172301.png" /></a>
 		</div>
-		<div class="col-md-4">
+		<div class="col-lg-3">
 			
 		</div>
-		<div class="col-md-4">
+		<div class="col-lg-3">
 			<p class="social">
 			<a href="http://www.facebook.com/jehan.fayad"><img src="./img/facebook.png" alt="facebook" width="50" height="50" /></a>
 			<a href="http://www.houzz.com/pro/jehan-fayad"><img src="./img/houzz.png" alt="houzz" width="50" height="50" /></a>
@@ -202,7 +110,7 @@
 			</button>
 		</div>
 
-		<div class="col-md-12">
+		<div class="col-lg-12">
 			<div class="footer">
 			<p class="pull-right"><a href="#">Back to top</a></p>
 			<p>&copy; 2016 Modern Era Design, Inc. <!--&middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a>--></p>
