Fix contact modal

--- a/gallery.html
+++ b/gallery.html
@@ -118,7 +118,7 @@
       <!-- /END THE FEATURETTES -->
 
 	<div id="footer"></div>
-	<div id="contactmodal"></div>
+	<div id="contactus"></div>
 
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="./js/jquery-2.1.4.min.js"></script>
@@ -129,7 +129,7 @@
 		  $("#footer").load("footer.html"); 
 		});
 		$(function(){
-		  $("#contactmodal").load("contactmodal.html"); 
+		  $("#contactus").load("contactmodal.html"); 
 		});
     </script>
 
