--- a/index.html
+++ b/index.html
@@ -136,19 +136,19 @@
           <img class="img-responsive" src="./img/main/main01.jpg" alt="Services">
           <h2>Services</h2>
           <p>Meeting with you in person is an opportunity to convert what you would like to achieve into specific projects that fit within your budget as well prepare the foundation for transforming your ideas into a complete interior.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="./services.html" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-md-4">
           <img class="img-responsive" src="./img/main/main02.jpg" alt="Portfolio">
           <h2>Portfolio</h2>
           <p>Take a look at the work we’ve done for people & businesses and see what we can do for you.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="./gallery.html" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-md-4">
           <img class="img-responsive" src="./img/main/main03.jpg" alt="Vision">
           <h2>Vision</h2>
           <p>Every person, family, and business has different needs and need a personal touch. I will work with you from start to finish and advice you on every detail from pillows to drapes and to find the colors that match your businesses theme and make your clients comfortable.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="./vision.html" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
