--- a/gallery.html
+++ b/gallery.html
@@ -57,61 +57,75 @@
 	  <!-- START THE FEATURETTES -->
 	<div class="container subpage"> 
 	
-	  <div class="row featurette">
-        <div class="col-sm-7">
-          <h2 class="featurette-heading">St. Albert <span class="text-muted">Wood's</span></h2>
-          <p class="lead">&nbsp;</p>
+	  <div class="row gallery">
+        <div class="col-sm-4">
+			<div class="thumbnail">
+				<img class="img-responsive center-block" src="http://st.hzcdn.com/simgs/f0b1202d05b3b8a9_3-1732/traditional-living-room.jpg" border=0 width='320' height='214' alt="St. Albert">
+				<div class="caption">
+				<h3>St. Albert <span class="text-muted">Wood's</span></h3>
+				<p>&nbsp;</p>
+				<p><a class="btn btn-primary" role="button" href="http://www.houzz.com/projects/1219408/st-albert-woods">View Album</a></p>
+				</div>
+			</div>
         </div>
-        <div class="col-sm-5">
-		<a href="http://www.houzz.com/projects/1219408/st-albert-woods">
-		  <img class="featurette-image img-responsive center-block" src="http://st.hzcdn.com/simgs/f0b1202d05b3b8a9_3-1732/traditional-living-room.jpg" border=0 width='320' height='214' alt="Regency at Windermere Show Home">
-		</a>
+		<div class="col-sm-4">
+			<div class="thumbnail">
+				<img class="img-responsive center-block" src="http://st.hzcdn.com/simgs/2c81c14b01a22401_3-7667/eclectic-living-room.jpg" border=0 width='320' height='214' alt="Newly Built">
+				<div class="caption">
+				<h3>Newly Built <span class="text-muted">North West Edmonton</span></h3>
+				<p>Custom built home in the North end of Edmonton.</p>
+				<p><a class="btn btn-primary" role="button" href="http://www.houzz.com/projects/225409/newly-built-north-west-edmonton">View Album</a></p>
+				</div>
+			</div>
+        </div>
+		<div class="col-sm-4">
+			<div class="thumbnail">
+				<img class="img-responsive center-block" src="http://st.hzcdn.com/simgs/50b166ea05026064_3-5070/modern-living-room.jpg" border=0 width='320' height='214' alt="Regency at Windermere Show Home">
+				<div class="caption">
+				<h3>Regency at Windermere <span class="text-muted">Show Home</span></h3>
+				<p>This beautiful 2 storey town house show home is located in the southside of Edmonton.</p>
+				<p><a class="btn btn-primary" role="button" href="http://www.houzz.com/projects/981374/regency-at-windermere-show-home">View Album</a></p>
+				</div>
+			</div>
+        </div>
+      </div>
+	  
+	  <hr class="gallery-divider">
+	  
+	  <div class="row gallery">
+        <div class="col-sm-4">
+			<div class="thumbnail">
+				<img class="img-responsive center-block" src="http://st.hzcdn.com/simgs/6a418b1504309b3a_3-1613/modern-kitchen.jpg" border=0 width='320' height='214' alt="Mcfarlane's">
+				<div class="caption">
+				<h3>Mcfarlane's <span class="text-muted">Two Storey Home</span></h3>
+				<p>&nbsp;</p>
+				<p><a class="btn btn-primary" role="button" href="http://www.houzz.com/projects/727594/mcfarlanes-two-storey-home">View Album</a></p>
+				</div>
+			</div>
+        </div>
+		<div class="col-sm-4">
+			<div class="thumbnail">
+				<img class="img-responsive center-block" src="http://st.hzcdn.com/simgs/dc915ecc0403ef87_3-3796/modern-family-room.jpg" border=0 width='320' height='214' alt="">
+				<div class="caption">
+				<h3>Keylor's <span class="text-muted">Basement Development</span></h3>
+				<p>&nbsp;</p>
+				<p><a class="btn btn-primary" role="button" href="http://www.houzz.com/projects/664022/keylors-basement-development">View Album</a></p>
+				</div>
+			</div>
+        </div>
+		<div class="col-sm-4">
+			<div class="thumbnail">
+				<img class="img-responsive center-block" src="http://st.hzcdn.com/simgs/c561707203754769_3-4925/modern-kitchen.jpg" border=0 width='320' height='214' alt="">
+				<div class="caption">
+				<h3>Dyer's <span class="text-muted">Bachelor Condo Unit</span></h3>
+				<p>&nbsp;</p>
+				<p><a class="btn btn-primary" role="button" href="http://www.houzz.com/projects/550772/dyers-bachelor-condo-unit">View Album</a></p>
+				</div>
+			</div>
         </div>
       </div>
 
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-sm-7 col-sm-push-5">
-          <h2 class="featurette-heading">Newly Built <span class="text-muted">North West Edmonton</span></h2>
-          <p class="lead">Custom built home in the North end of Edmonton.</p>
-        </div>
-        <div class="col-sm-5 col-sm-pull-7">
-		<a href='http://www.houzz.com/projects/225409/newly-built-north-west-edmonton'>
-		  <img class="featurette-image img-responsive center-block" src='http://st.hzcdn.com/simgs/2c81c14b01a22401_3-7667/eclectic-living-room.jpg' border=0 width='320' height='214' />
-		</a>
-		</div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-sm-7">
-          <h2 class="featurette-heading">Regency at Windermere <span class="text-muted">Show Home</span></h2>
-          <p class="lead">This beautiful 2 storey town house show home is located in the southside of Edmonton.</p>
-        </div>
-        <div class="col-sm-5">
-		<a href="http://www.houzz.com/projects/981374/regency-at-windermere-show-home">
-		  <img class="featurette-image img-responsive center-block" src="http://st.hzcdn.com/simgs/50b166ea05026064_3-5070/modern-living-room.jpg" border=0 width='320' height='214' alt="Regency at Windermere Show Home">
-		</a>
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-sm-7 col-sm-push-5">
-          <h2 class="featurette-heading">Mcfarlane's <span class="text-muted">Two Storey Home</span></h2>
-          <p class="lead">&nbsp;</p>
-        </div>
-        <div class="col-sm-5 col-sm-pull-7">
-		<a href='http://www.houzz.com/projects/727594/mcfarlanes-two-storey-home'>
-		  <img class="featurette-image img-responsive center-block" src='http://st.hzcdn.com/simgs/6a418b1504309b3a_3-1613/modern-kitchen.jpg' border=0 width='320' height='214' />
-		</a>
-		</div>
-      </div>
-
-      <hr class="featurette-divider">
+      <hr class="gallery-divider">
 
 	</div><!-- /.container -->
 	
