Add houzz reviews to main page

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
         <div class="col-md-7">
           <h2 class="featurette-heading">Best of Houzz 2015. <span class="text-muted">Design and Client Satisfaction.</span></h2>
           <p class="lead">In 2015, Modern Era Design portfolio was voted most popular for design and the highest level for client satisfaction by the Houzz community.</p>
+		  <p><a href="http://www.houzz.com/browseReviews/jehan_fayad" role="button" class="btn btn-primary">See my customer reviews on Houzz</a>
         </div>
         <div class="col-md-5">
 		<a href="http://www.houzz.com/pro/jehan-fayad/modern-era-design">
