space out footer

--- a/footer.html
+++ b/footer.html
@@ -1,20 +1,20 @@
 	<footer>
 	<div class="container-fluid dark" id="contact">
 	  
-		<div class="col-sm-4">
+		<div class="col-sm-3">
 			<p>&nbsp;</p>
 			<a title="Click for the Business Review of Modern Era Design Inc, an Interior Decorators & Designers in Edmonton AB" href="https://www.bbb.org/edmonton/business-reviews/interior-decorators-and-designers/modern-era-design-in-edmonton-ab-172301#sealclick"><img alt="Click for the BBB Business Review of this Interior Decorators & Designers in Edmonton AB" style="border: 0;" src="https://seal-edmonton.bbb.org/seals/black-seal-120-61-whitetxt-moderneradesigninc-172301.png" /></a>
 		</div>
-		<div class="col-sm-3">
-			
-		</div>
-		<div class="col-sm-5">
+		<div class="col-sm-6">
 			<p class="social">
 			<a href="http://www.facebook.com/jehan.fayad"><img src="./img/facebook.png" alt="facebook" width="50" height="50" /></a>
 			<a href="http://www.houzz.com/pro/jehan-fayad"><img src="./img/houzz.png" alt="houzz" width="50" height="50" /></a>
 			<a href="http://snapwidget.com/u/824029115"><img src="./img/instagram.png" alt="instagram" width="50" height="50" /></a>
 			<a href="http://www.linkedin.com/profile/view?id=209522150"><img src="./img/Linkedin.png" alt="Linkedin" width="50" height="50" /></a>
 			</p>
+		</div>
+		<div class="col-sm-3">
+			<p>&nbsp;</p>
 			<button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#contactmodal">
 				Contact Us
 			</button>
