--- a/contactmodal.html
+++ b/contactmodal.html
@@ -7,8 +7,8 @@
 			  </div>
 			  <div class="modal-body">
 
-				<form class="form-horizontal" role="form" action="" method="post" name="" id="" accept-charset="utf-8">
-				  <input type="hidden" name="formID" value="" />
+				<form class="form-horizontal" role="form" action="https://submit.jotform.ca/submit/53406924218253/" method="post" name="form_53406924218253" id="53406924218253" accept-charset="utf-8">
+				  <input type="hidden" name="formID" value="53406924218253" />
 				  
 				  <div class="form-group">
 					<label for="q15_yourName" class="col-sm-4 control-label">Your Name</label>
@@ -16,25 +16,25 @@
 					  <input class="form-control" type="text" size="10" name="q15_yourName[first]" id="first_15" placeholder="First Name" required />
 					</div>
 					<div class="col-sm-4">
-					  <input class="form-control" type="text" size="15" name="q15_yourName[last]" id="last_15" placeholder="Last Name"/>
+					  <input class="form-control" type="text" size="15" name="q15_yourName[last]" id="last_15" placeholder="Last Name" required/>
 					</div>
 				  </div>
 				  <div class="form-group">
 					<label for="q16_yourEmail16" class="col-sm-4 control-label">Your Email Address</label>
 					<div class="col-sm-8">
-					  <input type="email" class="form-control" id="input_16" name="q16_yourEmail16" size="32" placeholder="name@domain.com">
+					  <input type="email" class="form-control" id="input_16" name="q16_yourEmail16" size="32" placeholder="name@domain.com" required>
 					</div>
 				  </div>
 				  <div class="form-group">
 					<label for="q22_phoneNumber22" class="col-sm-4 control-label">Phone Number</label>
 					<div class="col-sm-2">
-					  <input type="tel" class="form-control" name="q22_phoneNumber22[area]" id="input_22_area" size="3" placeholder="780">
+					  <input type="tel" class="form-control" name="q22_phoneNumber22[area]" id="input_22_area" size="3" placeholder="780" required>
 					</div>
 					<div class="col-sm-1">
 					 <strong>_</strong>
 					</div>
 					<div class="col-sm-5">
-					  <input type="tel" class="form-control" name="q22_phoneNumber22[phone]" id="input_22_phone" size="8" placeholder="444-4444">
+					  <input type="tel" class="form-control" name="q22_phoneNumber22[phone]" id="input_22_phone" size="8" placeholder="444-4444" required>
 					</div>
 				  </div>
 				  
