Make contact menu open modal.

--- a/vision.html
+++ b/vision.html
@@ -40,7 +40,7 @@
                 <li><a href="./services.html">Services</a></li>
 				<li><a href="./gallery.html">Portfolio</a></li>
 				<li class="active"><a href="./vision.html">Vision</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a data-toggle="modal" href="#contactmodal">Contact</a></li>
               </ul>
 			  <div class="nav navbar-nav navbar-right">
 				<p class="navbar-text small">Email: jehan@moderneradesign.ca <br/>
