--- a/footer.html
+++ b/footer.html
@@ -28,3 +28,8 @@
 		</div>
 	</div>
 	</footer>
+	
+	<script src="https://cdn.jotfor.ms/static/prototype.forms.js" type="text/javascript"></script>
+	<script src="https://cdn.jotfor.ms/static/jotform.forms.js?3.3.10159" type="text/javascript"></script>
+	
+	
