--- a/contactmodal.html
+++ b/contactmodal.html
@@ -68,3 +68,6 @@
 			</div><!-- /.modal-content -->
 		  </div><!-- /.modal-dialog -->
 		</div><!-- /.modal -->
+		
+		<script src="https://cdn.jotfor.ms/static/prototype.forms.js" type="text/javascript"></script>
+		<script src="https://cdn.jotfor.ms/static/jotform.forms.js?3.3.10159" type="text/javascript"></script>
