--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 	<div id="footer"></div>
 
     <!-- Placed at the end of the document so the pages load faster -->
-
+	<script src="https://cdn.jotfor.ms/static/prototype.forms.js" type="text/javascript"></script>
 	<script src="https://cdn.jotfor.ms/static/jotform.forms.js?3.3.10159" type="text/javascript"></script>
 	<script src="./js/jquery-2.1.4.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
