--- a/gallery.html
+++ b/gallery.html
@@ -30,8 +30,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="menu-logo" href="#" alt="euro design inc.">
-			  <img width="150" height="100" src="./img/logo_wh_sm.png">
+              <a class="menu-logo" href="./index.html" alt="Modern Era Design Inc.">
+			  <img width="150" height="100" src="./img/logo_bk_sm.png">
 			  </a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
@@ -137,14 +137,17 @@
 	    <!-- Placed at the end of the document so the pages load faster -->
 	<script src="./js/jquery-2.1.4.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
+	<script type="text/javascript">
+		$.noConflict();
+	</script>
 	<script src="https://cdn.jotfor.ms/static/prototype.forms.js" type="text/javascript"></script>
 	<script src="https://cdn.jotfor.ms/static/jotform.forms.js?3.3.10159" type="text/javascript"></script>	
 	
 	<script> 
-		$(function(){
-			$("#footer").load("footer.html");
+		jQuery(function(){
+			jQuery("#footer").load("footer.html");
 			
-			$.ajax({
+			jQuery.ajax({
 				type: "GET",
 				url: "gallerydata.txt",
 				dataType: "text",
@@ -155,7 +158,7 @@
 		function processData(allText) {
 			var allTextLines = allText.split(/\r\n|\n/);
 			var lines = [];
-			var $gallery = $('#gallery');
+			var $gallery = jQuery('#gallery');
 			var $row;
 
 			for (var i=0; i<allTextLines.length; i++) {
@@ -169,7 +172,7 @@
 					
 					if (i % 3 == 0)
 					{
-						$row = $('<div class="row"></div>').appendTo($gallery);
+						$row = jQuery('<div class="row"></div>').appendTo($gallery);
 						$gallery.append('<hr class="gallery-divider"/>');
 					}
 					
