--- a/template.html
+++ b/template.html
@@ -30,8 +30,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="menu-logo" href="#" alt="euro design inc.">
-			  <img width="150" height="100" src="./img/logo_wh_sm.png">
+              <a class="menu-logo" href="./index.html" alt="Modern Era Design Inc.">
+			  <img width="150" height="100" src="./img/logo_bk_sm.png">
 			  </a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
