--- a/vision.html
+++ b/vision.html
@@ -30,8 +30,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="menu-logo" href="#" alt="euro design inc.">
-			  <img width="150" height="100" src="./img/logo_wh_sm.png">
+              <a class="menu-logo" href="./index.html" alt="Modern Era Design Inc.">
+			  <img width="150" height="100" src="./img/logo_bk_sm.png">
 			  </a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
@@ -156,14 +156,19 @@
 	<!-- Placed at the end of the document so the pages load faster -->
 	<script src="./js/jquery-2.1.4.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
-	<script src="https://cdn.jotfor.ms/static/prototype.forms.js" type="text/javascript"></script>
-	<script src="https://cdn.jotfor.ms/static/jotform.forms.js?3.3.10159" type="text/javascript"></script>	
+	
+	<script type="text/javascript">
+		$.noConflict();
+	</script>
 	
 	<script> 
-		$(function(){
-		  $("#footer").load("footer.html"); 
+		jQuery(function(){
+		  jQuery("#footer").load("footer.html"); 
 		});
     </script>
+	
+	<script src="https://cdn.jotfor.ms/static/prototype.forms.js" type="text/javascript"></script>
+	<script src="https://cdn.jotfor.ms/static/jotform.forms.js?3.3.10159" type="text/javascript"></script>
 
   </body>
 </html>
