--- a/gallery.html
+++ b/gallery.html
@@ -180,7 +180,7 @@
 										'<div class="thumbnail_img"><a href="'+tarr[3]+'"><img class="img-responsive" src="'+tarr[4]+'" border="0" width="320" height="214" alt="'+tarr[0]+'"></a></div></div>' +
 										'<div class="caption"><h3>'+tarr[0]+' <span class="text-muted">'+tarr[1]+'</span></h3>' +
 										'<p>'+tarr[2]+'</p>' + 
-										'<p><a class="btn btn-primary" role="button" href="'+tarr[3]+'">View Album</a></p></div></div>';
+										'<p><a class="btn btn-primary btn" role="button" href="'+tarr[3]+'">View Album</a></p></div></div>';
 					
 					$row.append(galleryblock);
 					
