featurettes side-by-side on sm

--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
       <hr class="featurette-divider">
 
       <div class="row featurette">
-        <div class="col-md-7">
+        <div class="col-sm-7">
           <h2 class="featurette-heading">Best of Houzz 2015. <span class="text-muted">Design and Client Satisfaction.</span></h2>
           <p class="lead">In 2015, Modern Era Design portfolio was voted most popular for design and the highest level for client satisfaction by the Houzz community.</p>
 		  <p><a href="http://www.houzz.com/browseReviews/jehan_fayad" role="button" class="btn btn-primary">See all customer reviews on Houzz</a>
         </div>
-        <div class="col-md-5">
+        <div class="col-sm-5">
 		<a href="http://www.houzz.com/pro/jehan-fayad/modern-era-design">
           <img class="featurette-image img-responsive center-block" src="./img/features/houzz_design_2015.gif" alt="Best of Houzz 2015"> &nbsp; 
 		  <img class="featurette-image img-responsive center-block" src="./img/features/houzz_service_2015.gif" alt="Best of Houzz 2015">
@@ -168,11 +168,11 @@
       <hr class="featurette-divider">
 
       <div class="row featurette">
-        <div class="col-md-7 col-md-push-5">
+        <div class="col-sm-7 col-sm-push-5">
           <h2 class="featurette-heading">Best of Houzz 2014. <span class="text-muted">Client Satisfaction.</span></h2>
           <p class="lead">In 2014, Modern Era Design was voted most popular for the highest level for client satisfaction by the Houzz community.</p>
         </div>
-        <div class="col-md-5 col-md-pull-7">
+        <div class="col-sm-5 col-sm-pull-7">
 		<a href="http://www.houzz.com/pro/jehan-fayad/modern-era-design">
           <img class="featurette-image img-responsive center-block" src="./img/features/badge_13_8.png" alt="Best of Houzz 2014">
 		</a>
