--- a/gallery.html
+++ b/gallery.html
@@ -174,6 +174,8 @@
 					{
 						$row = jQuery('<div class="row"></div>').appendTo($gallery);
 						$gallery.append('<hr class="gallery-divider"/>');
+					} else {
+						$row.append('<hr class="visible-xs gallery-divider"/>');
 					}
 					
 					var galleryblock =  '<div class="col-sm-4"><div class="thumbnail">' + 
