--- a/services.html
+++ b/services.html
@@ -79,7 +79,7 @@
 		
 		<div class="page-header">
 		<h1>3D Rendering and perspective “see it before you build it”</h1>
-		<p><img class="img-responsive" src="./img/3drender.jpg" alt="" width="670" height="377" /></p>
+		<p><a href="./img/3drender.jpg"><img class="img-responsive" src="./img/3drender_t.jpg" alt="" width="670" height="377" /></a></p>
 		<p>We can provide you 3D or 2D drawings on how your space will look like.  This is perfect for the individual who has trouble visualizing what the space will look like in their head.</p>
 		</div>
 		
