--- a/footer.html
+++ b/footer.html
@@ -7,7 +7,7 @@
 		</div>
 		<div class="col-sm-6">
 			<p class="social">
-			<a href="http://www.facebook.com/jehan.fayad"><img src="./img/facebook.png" alt="facebook" width="50" height="50" /></a>
+			<a href="https://www.facebook.com/Modern-Era-Design-182237538590793"><img src="./img/facebook.png" alt="facebook" width="50" height="50" /></a>
 			<a href="http://www.houzz.com/pro/jehan-fayad"><img src="./img/houzz.png" alt="houzz" width="50" height="50" /></a>
 			<a href="http://snapwidget.com/u/824029115"><img src="./img/instagram.png" alt="instagram" width="50" height="50" /></a>
 			<a href="http://www.linkedin.com/profile/view?id=209522150"><img src="./img/Linkedin.png" alt="Linkedin" width="50" height="50" /></a>
